packages/kit/test/apps/basics/src/routes/errors/page-endpoint/post-explicit.js
import { FancyError } from './_shared.js';

export const POST = () => ({
	status: 400,
	body: new FancyError('oops')
});
